<resources>
    <!-- TODO: Set the app name -->
    <string name="app_name">AppName</string>

    <!-- Onboarding Activity -->
    <string name="content_description_circle_marker">Circle Marker</string>
    <string name="content_description_book">Book</string>
    <string name="onboarding_1_description">StillSpace helps find quiet\nstudy spaces near you.</string>

    <string name="onboarding_2_text_1">View study areas, then see\nif it is available <b>now</b> or\nin <b>1–2 hours.</b></string>

    <string name="content_description_current_page">Current page icon</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>

    <!-- Maps Activity -->
    <string name="logo_content_description">Logo</string>

    <!-- Button Switch Bar Fragment -->
    <string name="btn_switch_0_text">Now</string>
    <string name="btn_switch_1_text">+1 hour</string>
    <string name="btn_switch_2_text">+2 hours</string>

    <!-- Location Recorder Activity -->
    <string name="location_recorder_title">Location Recorder</string>
    <string name="create_output_button">Create Output</string>
    <string name="location_recorder_starting">Starting…</string>

    <!-- Location Request Dialog Fragment -->
    <string name="dialog_location_request_title">Location Required</string>
    <string name="dialog_location_request_message">Location must be enabled for this application.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="exit">Exit</string>

    <!-- Location Exit Dialog Fragment -->
    <string name="dialog_location_exit_title">Location Required</string>
    <string name="dialog_location_exit_message">This application requires location permissions. Visit Settings and enable permissions for this application.</string>

    <!-- NFC Scan Activity -->
    <string name="nfc_scan_instructions">Scan</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_first_name_default">Brad</string>
    <string name="pref_last_name_default">Bart</string>
    <string name="pref_email_default">myemail@gmail.com</string>
    <string name="pref_reset_button_key">reset</string>
    <string name="pref_reset_summary">Reset all your settings and restart the application.</string>
    <string name="confirm_reset_dialog">Are you sure you want to reset the app? All information you entered will be removed.</string>
    <string name="cancel">Cancel</string>

    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
